--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 
 def pods
     pod 'AFNetworking'
-
+    pod 'CocoaSecurity'
 #    pod 'SolarKit-OC', :path => '../'
     pod 'YYModel'
     pod 'ReactiveCocoa',          '~> 2.0'
