--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,7 +6,7 @@ def pods
     pod 'AFNetworking'
     pod 'CocoaSecurity'
 #    pod 'SolarKit-OC', :path => '../'
-
+    pod 'MBProgressHUD'
     pod 'SSZipArchive'
     pod 'YYModel'
     pod 'ReactiveCocoa',          '~> 2.0'
