--- a/Example/Example/Info.plist
+++ b/Example/Example/Info.plist
@@ -41,6 +41,8 @@
 	<string>使用麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>使用相册</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>将把照片视频存储到相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -62,10 +64,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
